Refactor QuestionSearchService to use SearchService and update related dependencies