@@ -19,17 +19,16 @@ package org.sakaiproject.tool.assessment.services.question;
 
 import java.util.ArrayList;
 import java.util.HashMap;
-import java.util.HashSet;
 import java.util.List;
 import java.util.Map;
-import java.util.Set;
+import java.util.stream.Collectors;
 
 import org.opensearch.action.search.SearchResponse;
 import org.opensearch.search.SearchHit;
 import org.opensearch.search.aggregations.bucket.terms.Terms;
 import org.opensearch.search.aggregations.metrics.TopHits;
 import org.sakaiproject.search.api.InvalidSearchQueryException;
-import org.sakaiproject.search.elasticsearch.ElasticSearchService;
+import org.sakaiproject.search.api.SearchService;
 import org.sakaiproject.site.api.SiteService;
 import org.sakaiproject.tool.assessment.facade.AgentFacade;
 import org.sakaiproject.tool.assessment.facade.AssessmentFacade;
@@ -43,8 +42,10 @@ import lombok.extern.slf4j.Slf4j;
 @Slf4j
 public class QuestionSearchServiceImpl implements QuestionSearchService {
 
+    private static final String SAM_ITEM_PREFIX = "/sam_item/";
+
     @Setter
-    private ElasticSearchService elasticSearchService;
+    private SearchService searchService;
 
     @Setter
     private SiteService siteService;
@@ -58,50 +59,36 @@ public class QuestionSearchServiceImpl implements QuestionSearchService {
     @Override
     public List<QuestionSearchResult> searchByTags(List<String> tagLabels, boolean andLogic) {
         if (tagLabels == null || tagLabels.isEmpty()) {
-            return new ArrayList<>();
+            return List.of();
         }
 
-        Map<String, String> searchParams = new HashMap<>();
-        searchParams.put("group", "hash");
-        searchParams.put("scope", "own");
-        searchParams.put("subtype", "item");
-        searchParams.put("logic", andLogic ? "and" : "or");
-
+        Map<String, String> searchParams = buildBaseSearchParams(andLogic);
         int i = 1;
         for (String tagLabel : tagLabels) {
-            searchParams.put("tag_" + i, tagLabel);
-            i++;
+            searchParams.put("tag_" + i++, tagLabel);
         }
 
         try {
-            SearchResponse sr = elasticSearchService.searchResponse(
-                "", null, null, 0, 0, "questions", searchParams);
+            SearchResponse sr = searchService.searchResponse("", null, null, 0, 0, "questions", searchParams);
             return processSearchResponse(sr);
         } catch (InvalidSearchQueryException ex) {
             log.warn("Error searching questions by tags: {}", ex.getMessage());
-            return new ArrayList<>();
+            return List.of();
         }
     }
 
     @Override
     public List<QuestionSearchResult> searchByText(String text, boolean andLogic) {
-        if (text == null || text.trim().isEmpty()) {
-            return new ArrayList<>();
+        if (text == null || text.isBlank()) {
+            return List.of();
         }
 
-        Map<String, String> searchParams = new HashMap<>();
-        searchParams.put("group", "hash");
-        searchParams.put("scope", "own");
-        searchParams.put("subtype", "item");
-        searchParams.put("logic", andLogic ? "and" : "or");
-
         try {
-            SearchResponse sr = elasticSearchService.searchResponse(
-                text, null, null, 0, 0, "questions", searchParams);
+            SearchResponse sr = searchService.searchResponse(text, null, null, 0, 0, "questions", buildBaseSearchParams(andLogic));
             return processSearchResponse(sr);
         } catch (InvalidSearchQueryException ex) {
             log.warn("Error searching questions by text: {}", ex.getMessage());
-            return new ArrayList<>();
+            return List.of();
         }
     }
 
@@ -117,8 +104,7 @@ public class QuestionSearchServiceImpl implements QuestionSearchService {
         searchParams.put("questionId", questionId);
 
         try {
-            SearchResponse sr = elasticSearchService.searchResponse(
-                "", null, null, 0, 1, "questions", searchParams);
+            SearchResponse sr = searchService.searchResponse("", null, null, 0, 1, "questions", searchParams);
             return sr.getHits().getTotalHits().value >= 1;
         } catch (Exception ex) {
             log.warn("Error checking question ownership for {}: {}", questionId, ex.getMessage());
@@ -129,19 +115,17 @@ public class QuestionSearchServiceImpl implements QuestionSearchService {
     @Override
     public List<String> getQuestionOrigins(String hash, Map<String, String> titleCache) {
         if (hash == null || hash.isEmpty()) {
-            return new ArrayList<>();
+            return List.of();
         }
 
-        List<String> origins = new ArrayList<>();
         Map<String, String> searchParams = new HashMap<>();
         searchParams.put("scope", "own");
         searchParams.put("subtype", "item");
         searchParams.put("hash", hash);
 
         try {
-            SearchResponse sr = elasticSearchService.searchResponse(
-                "", null, null, 0, 1000, "questions", searchParams);
-
+            SearchResponse sr = searchService.searchResponse("", null, null, 0, 1000, "questions", searchParams);
+            List<String> origins = new ArrayList<>();
             for (SearchHit hit : sr.getHits()) {
                 String origin = extractOrigin(hit, titleCache);
                 if (!origin.isEmpty()) {
@@ -151,18 +135,89 @@ public class QuestionSearchServiceImpl implements QuestionSearchService {
             return origins;
         } catch (Exception ex) {
             log.warn("Error getting question origins for hash {}: {}", hash, ex.getMessage());
-            return new ArrayList<>();
+            return List.of();
         }
     }
 
-    private List<QuestionSearchResult> processSearchResponse(SearchResponse sr) {
-        List<QuestionSearchResult> results = new ArrayList<>();
+    @Override
+    public String getOriginDisplay(QuestionSearchResult result, Map<String, String> titleCache) {
+        if (result == null) {
+            return "";
+        }
+        try {
+            if (result.isFromQuestionPool()) {
+                String cacheKey = "qp:" + result.getQuestionPoolId();
+                if (titleCache != null && titleCache.containsKey(cacheKey)) {
+                    return titleCache.get(cacheKey);
+                }
+                QuestionPoolFacade pool = questionPoolService.getPool(
+                        Long.parseLong(result.getQuestionPoolId()), AgentFacade.getAgentString());
+                if (pool == null) {
+                    return "";
+                }
+                String title = pool.getTitle();
+                if (titleCache != null) {
+                    titleCache.put(cacheKey, title);
+                }
+                return title;
+            }
 
+            if (result.isFromAssessment()) {
+                String siteCacheKey = "site:" + result.getSiteId();
+                String assessmentCacheKey = "assessment:" + result.getAssessmentId();
+
+                String siteTitle;
+                if (titleCache != null && titleCache.containsKey(siteCacheKey)) {
+                    siteTitle = titleCache.get(siteCacheKey);
+                } else {
+                    try {
+                        siteTitle = siteService.getSite(result.getSiteId()).getTitle();
+                        if (titleCache != null) {
+                            titleCache.put(siteCacheKey, siteTitle);
+                        }
+                    } catch (Exception ex) {
+                        return "";
+                    }
+                }
+
+                String assessmentTitle;
+                if (titleCache != null && titleCache.containsKey(assessmentCacheKey)) {
+                    assessmentTitle = titleCache.get(assessmentCacheKey);
+                } else {
+                    AssessmentFacade assessment = assessmentService.getAssessment(result.getAssessmentId());
+                    if (assessment == null) {
+                        return "";
+                    }
+                    assessmentTitle = assessment.getTitle();
+                    if (titleCache != null) {
+                        titleCache.put(assessmentCacheKey, assessmentTitle);
+                    }
+                }
+
+                return siteTitle + " : " + assessmentTitle;
+            }
+        } catch (Exception ex) {
+            log.debug("Could not resolve origin for question {}: {}", result.getId(), ex.getMessage());
+        }
+        return "";
+    }
+
+    private Map<String, String> buildBaseSearchParams(boolean andLogic) {
+        Map<String, String> params = new HashMap<>();
+        params.put("group", "hash");
+        params.put("scope", "own");
+        params.put("subtype", "item");
+        params.put("logic", andLogic ? "and" : "or");
+        return params;
+    }
+
+    private List<QuestionSearchResult> processSearchResponse(SearchResponse sr) {
         Terms dedup = sr.getAggregations().get("dedup");
         if (dedup == null) {
-            return results;
+            return List.of();
         }
 
+        List<QuestionSearchResult> results = new ArrayList<>();
         for (Terms.Bucket entry : dedup.getBuckets()) {
             TopHits topHits = entry.getAggregations().get("dedup_docs");
             if (topHits == null) {
@@ -172,39 +227,24 @@ public class QuestionSearchServiceImpl implements QuestionSearchService {
             for (SearchHit hit : topHits.getHits().getHits()) {
                 try {
                     String id = hit.getId();
-                    if (!id.startsWith("/sam_item/")) {
+                    if (!id.startsWith(SAM_ITEM_PREFIX)) {
                         continue;
                     }
 
-                    String itemId = id.substring(10);
+                    String itemId = id.substring(SAM_ITEM_PREFIX.length());
                     String typeId = hit.field("typeId").getValue();
                     String qText = hit.field("qText").getValue();
 
-                    Set<String> tags = new HashSet<>();
-                    List<Object> tagValues = hit.field("tags").getValues();
-                    if (tagValues != null) {
-                        for (Object tagValue : tagValues) {
-                            tags.add(tagValue.toString());
-                        }
-                    }
+                    var tags = hit.field("tags") != null
+                            ? hit.field("tags").getValues().stream().map(Object::toString).collect(Collectors.toSet())
+                            : java.util.Set.of();
 
-                    String questionPoolId = null;
-                    if (hit.field("questionPoolId") != null && hit.field("questionPoolId").getValue() != null) {
-                        questionPoolId = hit.field("questionPoolId").getValue().toString();
-                    }
-
-                    String assessmentId = null;
-                    if (hit.field("assessmentId") != null && hit.field("assessmentId").getValue() != null) {
-                        assessmentId = hit.field("assessmentId").getValue().toString();
-                    }
-
-                    String siteId = null;
-                    if (hit.field("site") != null && hit.field("site").getValue() != null) {
-                        siteId = hit.field("site").getValue().toString();
-                    }
+                    String questionPoolId = getFieldValue(hit, "questionPoolId");
+                    String assessmentId = getFieldValue(hit, "assessmentId");
+                    String siteId = getFieldValue(hit, "site");
 
                     results.add(new QuestionSearchResult(itemId, typeId, qText, tags,
-                        questionPoolId, assessmentId, siteId));
+                            questionPoolId, assessmentId, siteId));
 
                 } catch (Exception ex) {
                     log.debug("Error processing search hit {}: {}", hit.getId(), ex.getMessage());
@@ -217,15 +257,12 @@ public class QuestionSearchServiceImpl implements QuestionSearchService {
 
     private String extractOrigin(SearchHit hit, Map<String, String> titleCache) {
         try {
-            // Check question pool first
-            if (hit.field("questionPoolId") != null && hit.field("questionPoolId").getValue() != null) {
-                String qpId = hit.field("questionPoolId").getValue().toString();
+            String qpId = getFieldValue(hit, "questionPoolId");
+            if (qpId != null) {
                 String cacheKey = "qp:" + qpId;
-
                 if (titleCache != null && titleCache.containsKey(cacheKey)) {
                     return titleCache.get(cacheKey);
                 }
-
                 QuestionPoolFacade pool = questionPoolService.getPool(Long.parseLong(qpId), AgentFacade.getAgentString());
                 if (pool == null) {
                     return "";
@@ -237,14 +274,9 @@ public class QuestionSearchServiceImpl implements QuestionSearchService {
                 return title;
             }
 
-            // Check assessment
-            if (hit.field("assessmentId") != null && hit.field("assessmentId").getValue() != null &&
-                hit.field("site") != null && hit.field("site").getValue() != null) {
-
-                String assessmentId = hit.field("assessmentId").getValue().toString();
-                String siteId = hit.field("site").getValue().toString();
-
-                // Get site title
+            String assessmentId = getFieldValue(hit, "assessmentId");
+            String siteId = getFieldValue(hit, "site");
+            if (assessmentId != null && siteId != null) {
                 String siteCacheKey = "site:" + siteId;
                 String siteTitle;
                 if (titleCache != null && titleCache.containsKey(siteCacheKey)) {
@@ -260,7 +292,6 @@ public class QuestionSearchServiceImpl implements QuestionSearchService {
                     }
                 }
 
-                // Get assessment title
                 String assessmentCacheKey = "assessment:" + assessmentId;
                 String assessmentTitle;
                 if (titleCache != null && titleCache.containsKey(assessmentCacheKey)) {
@@ -278,12 +309,14 @@ public class QuestionSearchServiceImpl implements QuestionSearchService {
 
                 return siteTitle + " : " + assessmentTitle;
             }
-
-            return "";
-
         } catch (Exception ex) {
             log.debug("Could not extract origin: {}", ex.getMessage());
-            return "";
         }
+        return "";
+    }
+
+    private String getFieldValue(SearchHit hit, String fieldName) {
+        var field = hit.field(fieldName);
+        return (field != null && field.getValue() != null) ? field.getValue().toString() : null;
     }
 }
